[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Prologue/CutScenes/death/road.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Prologue/ProloguePlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Prologue/CutScenes/death/granny.png" type="Texture" id=3]
[ext_resource path="res://Assets/Prologue/CutScenes/death/thomas.png" type="Texture" id=4]
[ext_resource path="res://Assets/Prologue/CutScenes/death/walk.png" type="Texture" id=5]
[ext_resource path="res://Scripts/PrologueOutside.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 110, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 220, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 330, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 440, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 550, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 660, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 770, 0, 110, 117 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 880, 0, 110, 117 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 41, 40 )

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Granny:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 584, 133 ), Vector2( 500, 133 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Granny:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartPoint:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Thomas:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Thomas:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 631, 98 ), Vector2( 461, 98 ) ]
}

[sub_resource type="Animation" id=14]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "transition_finished"
} ]
}

[node name="PrologueOutside" type="Node2D"]
script = ExtResource( 6 )

[node name="Back" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Floor" type="StaticBody2D" parent="Back"]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Back/Floor"]
polygon = PoolVector2Array( 1000, 192, -71, 192, -71, 200, 1000, 200 )

[node name="Door" type="StaticBody2D" parent="Back"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Back/Door"]
polygon = PoolVector2Array( 990, 192, 990, 69, 999, 69, 999, 192 )

[node name="Thomas" type="Sprite" parent="."]
visible = false
position = Vector2( 456, 76 )
texture = ExtResource( 4 )
hframes = 17

[node name="Granny" type="AnimatedSprite" parent="."]
position = Vector2( 584, 133 )
frames = SubResource( 10 )
flip_h = true

[node name="StartPoint" type="Area2D" parent="."]
visible = false
position = Vector2( 584, 151 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StartPoint"]
texture = ExtResource( 3 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartPoint"]
shape = SubResource( 11 )

[node name="ProloguePlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 971, 133 )

[node name="Camera2D" type="Camera2D" parent="ProloguePlayer"]
current = true
zoom = Vector2( 0.37, 0.37 )
process_mode = 0
limit_left = 6
limit_top = 0
limit_right = 999
limit_bottom = 200
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Transition" type="Control" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Transition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Begin"
anims/Begin = SubResource( 12 )
anims/Death = SubResource( 13 )
anims/End = SubResource( 14 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 631, 98 )
zoom = Vector2( 0.37, 0.37 )
process_mode = 0
limit_left = 6
limit_top = 0
limit_right = 999
limit_bottom = 200
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[connection signal="body_entered" from="StartPoint" to="." method="_on_StartPoint_body_entered"]
